@@ -117,6 +117,7 @@ Joust L-1
 Jungle Lord L-1 & New Tricks Home ROMs by A.M. Thurnherr
 Kiss prototype v.2 (not working yet)
 Laser War 8.1
+Lethal Weapon 2.08p voices mod
 Lost in Space US display 1.01 & German display 1.02
 Mars - God of War French
 Monopoly 2.51 (Italian display)
